  "after". Also redesign numeric comparators to provide skipping functionality
  by default. (Mayya Sharipova, Jim Ferenczi)

* LUCENE-9527: Upgrade javacc to 7.0.4, regenerate query parsers. (Dawid Weiss)

* LUCENE-9531: Consolidated CharStream and FastCharStream classes: these have been moved
  from each query parser package to org.apache.lucene.queryparser.charstream (Dawid Weiss).

Bug fixes

* LUCENE-8663: NRTCachingDirectory.slowFileExists may open a file while 
  it's inaccessible. (Dawid Weiss)

* LUCENE-9117: RamUsageEstimator hangs with AOT compilation. Removed any attempt to 
  estimate Long.valueOf cache size. (Cleber Muramoto, Dawid Weiss)

* LUCENE-9290: Don't assume that different XYPoint have different hash code
  (Ignacio Vera via Mike Drob)

* LUCENE-9372: Fix paths for cygwin/msys before gradle wrapper jar lookup.
  (Peter Barna)

* LUCENE-9365: FuzzyQuery was missing matches when prefix length was equal to the term length
  (Mark Harwood, Mike Drob)

Other

* LUCENE-9312: Allow gradle builds against arbitrary JVMs. (Tomoko Uchida, Dawid Weiss)

* LUCENE-9391: Upgrade HPPC to 0.8.2. (Haoyu Zhai)

* LUCENE-8768: Fix Javadocs build in Java 11. (Namgyu Kim)

* LUCENE-9092: upgrade randomizedtesting to 2.7.5 (Dawid Weiss)

* LUCENE-8656: Deprecations in FuzzyQuery and get compiler warnings out of 
  queryparser code (Alan Woodward, Erick Erickson)

* LUCENE-9344: Convert .txt files to properly formatted .md files. (Tomoko Uchida, Uwe Schindler)

* LUCENE-9267: Update MatchingQueries documentation to correct
  time unit. (Pierre-Luc Perron via Mike Drob)

* LUCENE-9411: Fail complation on warnings, 9x gradle-only (Erick Erickson, Dawid Weiss)
  Deserves mention here as well as Lucene CHANGES.txt since it affects both.

* LUCENE-9433: Remove Ant support from trunk (Erick Erickson, Uwe Schindler et.al.)

* LUCENE-9215: Replace checkJavaDocs.py with doclet (Robert Muir, Dawid Weiss, Uwe Schindler)
